--- a/restaurant.html
+++ b/restaurant.html
@@ -22,9 +22,11 @@
       <h1><a tabindex="1" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" role="navigation"> <!-- add aria role -->
-      <li><a tabindex="2" href="/">Home</a></li>
-    </ul>
+    <nav> <!-- project review correction -->
+      <ul id="breadcrumb" role="navigation"> <!-- add aria role -->
+        <li><a tabindex="2" href="/">Home</a></li>
+      </ul>
+    </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -34,12 +36,12 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="location" role="application" ></div> <!-- project review correction -->
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2> <!-- project review correction -->
       <img id="restaurant-img">
       <p id="restaurant-cuisine" role="banner"></p> <!-- add aria role -->
       <p id="restaurant-address"></p>
